2026-01-11

- Extended scripts for macOS operating system:
  Moved console into main thread (macOS GUI requirement!),
  moved Mapsforge server completely own thread
  Extended operating system dependent code to include macOS
  Extended README to include macOS
- Redesigned communication between thread and console

2025-11-01

- Dropped support of server version < 0.22.0.0
- Corrected some localized texts
- Fixed possible script aborting when retrieving curl version
- Minor script optimizations

2025-10-14

- Setting an operating system-dependent temporary directory environment 
  for use by script and internally called applications
- Added french translation (Help with translation errors is welcome!)

2025-10-06

- Fixed: script aborted due to typo
- Workaround running script by "Open with" on Windows
- Minor script optimizations

2025-09-25

- Improved moving focus by mouse button 1 click away from text input fields

2025-08-27

- Speed up console output
- Hidden console window no longer reduces performance
- For performance reasons, console output window
  can now be disabled during console output generation
  and enabled again later to view cumulative output
- Checkbutton "Logging of server requests" has moved to main menu
  now concerning Mapsforge tile server requests
  as well as external tile server (TMS) requests
 
2025-08-22

- Modified console again
  to prevent from potential core dump on Linux 

2025-08-20

- Modified console output to avoid console potentially
  freezing and becoming unresponsable to keyboard/mouse
  due to being flooded

2025-06-14

- Added support for Marlin-renderer for JDK17+

2025-04-28

- Fixed: Spaces in temporary folder path resulted in error message
  "[SRV] Error: Could not find or load main class ...log4j.properties" 

2025-03-05

- (Re-)allowed positioning insert cursor in text input fields
- Selection in file selection window was not highlighted (Linux only!)
- Removed ability to disable the output console completely